# MedicalAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  db.py  docker-compose.yml  graph.py  langgraph.json  main.py  medical_graph.py  models.py  pyproject.toml  requirements-test.txt  requirements.txt  停止项目.cmd  启动项目.cmd
agent_core/: chat_schema.py  config.py  graph.py  json_utils.py  lab_report_report.py  lab_report_rules.py  lab_report_vision.py  langchain_chains.py  llm.py  medical_graph.py  prompt.py
backend/: app.py
docs/: FILE_OVERVIEW.md  project_report.md
eval/: triage_eval_cases.json
examples/: demo_cases.json
frontend/: app.js  concept-cyber-medical.html  concept-dark-tech.html  concept-glass-tech.html  index.html  style.css
medical_knowledge/: __init__.py  knowledge_loader.py  knowledge_retriever.py
rag/: __init__.py  build_vector_db.py  retriever.py  splitter.py
scripts/: check_quality.py  check_triage_regression.py  check_utf8.py  ensure_mysql.ps1  evaluate_demo_cases.py  seed_mysql.py  start_project.ps1  stop_project.ps1
tests/: test_cli.py  test_demo_cases.py  test_evaluation.py  test_json_utils.py  test_knowledge_loader.py  test_knowledge_retriever.py  test_lab_report_rules.py  test_lab_report_vision.py
tools/: __init__.py  _init_.py  business_guard_tool.py  department_llm_classifier_tool.py  department_router_tool.py  high_risk_log_tool.py  hospital_map_tool.py  human_handoff_tool.py  lab_report_tool.py  llm_intent_tool.py  medical_rag_tool.py  qwen_followup_tool.py  risk_triage_tool.py  (+5 more)
(+117 files in other folders)
